deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: express-app
spec:
    replicas: 3
    selector:
        matchLabels:
            app: express-app
    template:
        metadata:
            labels:
                app: express-app
        spec:
            containers:
                - name: express-app
                  image: 'encall/cpe241-express:latest'
                  ports:
                      - containerPort: 80
                  imagePullPolicy: Never
