service.yaml
apiVersion: v1
kind: Service
metadata:
    name: adago-svc
    namespace: adago
spec:
    selector:
        app: adago-backend
    type: ClusterIP
    ports:
        - port: 3000
          targetPort: 3000
